tests/paczka1/fuzzy1/83339430.err
Error in line 1: YTR2 S369 61,1
Error in line 9: XDiSJ5 S983 48,8
Error in line 2: YTR2 A565 77,2
Error in line 11: vhxYzwoj S983 15,2
Error in line 8: bVeU4 A565 62,2
Error in line 17: vhxYzwoj S369 14,5
Error in line 26: XDiSJ5 A985 13,8
